Athena/wwwroot/Templates/template3/Ingress/example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kali-example2
  annotations:
    athena-regex: (.*)
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    lab: example    
spec:
  rules:
  - host: test.athenaprojectlab.com
    http:
      paths:
      - path: /example/kali/tty/
        backend:
          serviceName: kali-tty
          servicePort: 80
